--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Julia #website title
+title: Algogator #website title
 description: > # this means to ignore newlines until "baseurl:"
   Julia
 url: #https://kuoa.github.io # the base hostname & protocol for your site
 baseurl: # the sub-path of your site, e.g. /blog/
 
-disqus_shortname: kuoa # leave empty if you don't want comments
+disqus_shortname:  # leave empty if you don't want comments
 google_analytics: false #if set to "true" modify the google_analytycs.html, set to false otherwise
 
 # Links settings
@@ -20,7 +20,7 @@ links:
     external:     false
     external:     false
   - name:         GitHub
-    url:          http://github.com/kuoa
+    url:          http://github.com/algogator
     external:     true
 
 # Build settings
